--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=prod
+
 spring.datasource.port=5432
 spring.datasource.host=ec2-50-19-32-96.compute-1.amazonaws.com
 spring.datasource.username=vbbfovpbzulutb
